# Shinobi

./: .gitignore  README.md  README_V1.md  batch_scan.py  generate_logo.py  pyproject.toml  repos_to_scan.txt  scan_results.csv  scan_results.md  scan_tracker.py  setup.py
patterns/: ai_risks.json  defaults.json  secrets.json
shinobi/: __init__.py  cli.py  logo.py  reporter.py  scanner.py  utils.py
shinobi/scanners/: __init__.py  ai_risks.py  armor.py  code_risks.py  defaults.py  deps.py  git_history.py  secrets.py
